force-app/main/default/objects/Billing_Account__c/Billing_Account__c.object-meta.xml
<CustomObject>
    <label>Billing Account</label>
    <nameField>
        <label>Invoicing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>