force-app/main/default/objects/Billing_Account__c/fields/BAN_For_Portal__c.field-meta.xml
<CustomField>
    <fullName>BAN_For_Portal__c</fullName>
    <formula>TEXT( BAN_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAN For Portal</label>
    <type>Text</type>
</CustomField>