force-app/main/default/objects/Billing_Account__c/fields/BAN_Number__c.field-meta.xml
<CustomField>
    <fullName>BAN_Number__c</fullName>
    <description>Technical field automatically filled in by a workflow.</description>
    <externalId>true</externalId>
    <label>BAN Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>