force-app/main/default/objects/Billing_Account__c/fields/Billing_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Type__c</fullName>
    <defaultValue>&quot;General&quot;</defaultValue>
    <description>To determine if it&apos;s a home office or any other type of record</description>
    <label>Billing Account Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Home Office</fullName>
            </value>
            <value>
                <fullName>Business Internet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>