force-app/main/default/objects/Billing_Account__c/fields/Billing_Att__c.field-meta.xml
<CustomField>
    <fullName>Billing_Att__c</fullName>
    <label>Billing Att.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>