force-app/main/default/objects/Billing_Account__c/fields/Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name__c</fullName>
    <label>Billing Company Name</label>
    <type>TextArea</type>
</CustomField>