force-app/main/default/objects/Billing_Account__c/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <label>Billing Postal Code</label>
    <type>TextArea</type>
</CustomField>