force-app/main/default/objects/Billing_Account__c/fields/Billing_Street_and_no__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_and_no__c</fullName>
    <label>Billing Street and No</label>
    <type>TextArea</type>
</CustomField>