force-app/main/default/objects/Billing_Account__c/fields/Default_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Billing Account is the default Billing Account for the Account. Used in new Home Office flow where it is assigned as default on Activation Lines.</description>
    <label>Default Billing Account</label>
    <type>Checkbox</type>
</CustomField>