force-app/main/default/objects/Billing_Account__c/fields/EAN_Number__c.field-meta.xml
<CustomField>
    <fullName>EAN_Number__c</fullName>
    <label>EAN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>