force-app/main/default/objects/Billing_Account__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>EAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>