force-app/main/default/objects/Billing_Account__c/fields/Invoicing_Name_For_Portal__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Name_For_Portal__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Name For Portal</label>
    <type>Text</type>
</CustomField>