force-app/main/default/objects/Billing_Account__c/fields/Number_of_Data_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Data_Subscriptions__c</fullName>
    <label>Number of Data Subscriptions</label>
    <summaryFilterItems>
        <field>Fokus_Subscription__c.Data__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Fokus_Subscription__c.Billing_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>