force-app/main/default/objects/Billing_Account__c/fields/Number_of_Mobile_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mobile_Subscriptions__c</fullName>
    <label>Number of Mobile Subscriptions</label>
    <summaryFilterItems>
        <field>Fokus_Subscription__c.MOBILE_NO__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Fokus_Subscription__c.Billing_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>