force-app/main/default/objects/Billing_Account__c/fields/Number_of_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Subscriptions__c</fullName>
    <label>Number of Subscriptions</label>
    <summaryForeignKey>Fokus_Subscription__c.Billing_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>