force-app/main/default/objects/Billing_Account__c/fields/Owner_Control__c.field-meta.xml
<CustomField>
    <fullName>Owner_Control__c</fullName>
    <label>Owner Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Block</fullName>
            </value>
            <value>
                <fullName>No Block</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>